--- a/server.cfg
+++ b/server.cfg
@@ -51,6 +51,7 @@ ensure sessionmanager-rdr3
 # resources
 ensure rsg-core
 ensure oxmysql
+ensure ox_lib
 ensure rsg-menubase
 ensure rsg-target
 ensure ip-chat
