--- a/server.cfg
+++ b/server.cfg
@@ -48,10 +48,12 @@ ensure sessionmanager-rdr3
 #ensure basic-gamemode
 #ensure hardcap
 
-# resources
-ensure rsg-core
+# database and library
 ensure oxmysql
 ensure ox_lib
+
+# resources
+ensure rsg-core
 ensure rsg-menubase
 ensure rsg-target
 ensure ip-chat
