--- a/server.cfg
+++ b/server.cfg
@@ -20,7 +20,7 @@ set mysql_connection_string "{{dbConnectionString}}"
 set mysql_slow_query_warning 200
 
 ## server settings
-sv_hostname "{{serverName}} built with {{recipeName}} by {{recipeAuthor}}!"
+sets sv_hostname "{{serverName}} built with {{recipeName}} by {{recipeAuthor}}!"
 sets sv_projectName "[{{recipeName}}] {{serverName}}"
 sets sv_projectDesc "{{recipeDescription}}"
 sets locale "en-US"
