--- a/server.cfg
+++ b/server.cfg
@@ -54,6 +54,8 @@ ensure ox_lib
 
 # resources
 ensure rsg-core
+ensure rsg-multicharacter
+ensure rsg-spawn
 ensure rsg-menubase
 ensure rsg-target
 ensure ip-chat
