--- a/rsgcore.yaml
+++ b/rsgcore.yaml
@@ -99,6 +99,11 @@ tasks:
     dest: ./resources/[standalone]/rNotify
     ref: main
     src: https://github.com/RexShack/rNotify
+
+  - action: download_github
+    dest: ./resources/[standalone]/fx-channel
+    ref: main
+    src: https://github.com/Fixitfy/fx-channel
         
   - action: waste_time # prevent github throttling
     seconds: 10
