--- a/server.cfg
+++ b/server.cfg
@@ -34,6 +34,8 @@ sets Developer "link"
 sets tags "rsg,roleplay"
 sv_endpointprivacy true
 
+set txAdmin-menuPtfxDisable true # Disable TXAdmin NoClip Particle Effect
+
 # https://v6.mantine.dev/theming/colors/#default-colors
 setr ox:primaryColor blue
 setr ox:primaryShade 8
