--- a/server.cfg
+++ b/server.cfg
@@ -37,7 +37,7 @@ sv_endpointprivacy true
 set txAdmin-menuPtfxDisable true # Disable TXAdmin NoClip Particle Effect
 
 # https://v6.mantine.dev/theming/colors/#default-colors
-setr ox:primaryColor blue
+setr ox:primaryColor red
 setr ox:primaryShade 8
 
 # use target
