feat(server.cfg): add new txAdmin convar
Adds the new txAdmin convar as directed in the announcement.

--- a/server.cfg
+++ b/server.cfg
@@ -35,6 +35,7 @@ sets tags "rsg,roleplay"
 sv_endpointprivacy true
 
 set txAdmin-menuPtfxDisable true # Disable TXAdmin NoClip Particle Effect
+set sv_experimentalNetGameEventHandler false
 
 # https://v6.mantine.dev/theming/colors/#default-colors
 setr ox:primaryColor red
